--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Test</h1>
+    
+    <div class="main">
+        <div class="navbar">
+            <div class="icon">
+                <h3>Pawfect Frieeds</h3>
+            </div>
+
+            <div class="menu">
+                <ul>
+                    <li><a href="#about">ABOUT US</a></li>
+                    <li><a href="#pets">AVAILABLE PETS</a></li>
+                    <li><a href="#services">OUR SERVICES</a></li>
+                    <li><a href="#testimonials">HAPPY TAILS</a></li>
+                    <li><a href="#contact">CONTACT</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    
 </body>
 </html>
