--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
             </div>
         </div>
     </div>
+    <div class="content">
+        <h1> <span>Pet</span> Shelter</h1>
+        <p class="par">Every animal deserves a loving home. Explore our services, meet our adorable pets, and make a difference today.</p>
+        <button class="cn"><a href="#about">JOIN US</a></button>
+    </div>
 
     
 </body>
