--- a/index.html
+++ b/index.html
@@ -30,7 +30,29 @@
         <p class="par">Every animal deserves a loving home. Explore our services, meet our adorable pets, and make a difference today.</p>
         <button class="cn"><a href="#about">JOIN US</a></button>
     </div>
-
+<section id="about" class="section">
+        <div class="about-us-section">
+            <h1 class="about-us-header">ABOUT US</h1>
+            <div class="divider"></div>
+            <div class="about-us-content">
+                <p>
+                    Welcome to <strong>MyPet</strong>, where every pet deserves a second chance! Our mission is to 
+                    connect loving families with pets in need, creating lifelong bonds built on care and companionship.
+                </p>
+                <p>
+                    Since our founding in 2015, we’ve been dedicated to rescuing, rehabilitating, and rehoming animals, 
+                    one wagging tail and purring heart at a time.
+                </p>
+                <p>
+                    With the help of our passionate team and community, we’ve already found homes for over 2,000 pets—and we’re just getting started! 
+                    Visit us to meet your future best friend, learn about adoption, or get involved through volunteering.
+                </p>
+                <p>
+                    Together, we can give every pet the love they deserve.
+                </p>
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
