Our Pets//Pet cards

--- a/index.html
+++ b/index.html
@@ -53,6 +53,33 @@
             </div>
         </div>
     </section>
+    <section id="pets" class="section">
+        <h2>Meet Our Pets</h2>
+        <div class="pet-gallery">
+            <div class="pet-card">
+                <img src="https://th.bing.com/th/id/R.dc895da0a2cb9afb6363f97affb119b3?rik=NgdVhdmQ4UFQuQ&riu=http%3a%2f%2f4.bp.blogspot.com%2f-TnZCJrXoc_k%2fT8Om6xDP6rI%2fAAAAAAAAeEg%2fuXHuETPu5mg%2fs1600%2fGolden-Retriever_Wallpapers.jpg&ehk=BS4nJulBUPDt9%2bTV9BrlZDExwQmqpWv9kNbGZlE%2b8mc%3d&risl=&pid=ImgRaw&r=0" alt="Golden Retriever Dog">
+                <h3>Buddy</h3>
+                <p>Age: 2 years</p>
+                <p>Breed: Golden Retriever</p>
+                <p>A playful and friendly companion.</p>
+            </div>
+            <div class="pet-card">
+                <img src="https://thumbs.dreamstime.com/b/female-red-solid-maine-coon-cat-lying-green-grass-beautiful-brushes-ears-closeup-profile-view-portrait-188225994.jpg" alt="Maine Coon Cat">
+                <h3>Whiskers</h3>
+                <p>Age: 1 year</p>
+                <p>Breed: Maine Coon</p>
+                <p>Perfect for snuggles on the couch.</p>
+            </div>
+            <div class="pet-card">
+                <img src="https://www.wallpaperbetter.com/wallpaper/878/83/814/rabbit-grass-1080P-wallpaper.jpg" alt="Rabbit in Grass">
+                <h3>Nibbles</h3>
+                <p>Age: 6 months</p>
+                <p>Breed: Netherland Dwarf</p>
+                <p>Small, curious, and loves carrots!</p>
+            </div>
+        </div>
+    </section>
+
     
 </body>
 </html>
