--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             </div>
         </div>
     </div>
+    <script src="https://unpkg.com/ionicsons@5.4.0/dist/ionicons.js"></script>
     <div class="content">
         <h1> <span>Pet</span> Shelter</h1>
         <p class="par">Every animal deserves a loving home. Explore our services, meet our adorable pets, and make a difference today.</p>
