--- a/index.html
+++ b/index.html
@@ -107,7 +107,29 @@
   </div>
 </div>
   </section>
+    
+ <section id="testimonials" class="section">
+        <h2>Happy Tails</h2>
+        <div class="testimonial">
+            <p>"Adopting Bella from Pawfect Friends was the best decision we ever made. She’s brought so much joy to our family!"</p>
+            <h4>- Emily R.</h4>
+        </div>
+        <div class="testimonial">
+            <p>"I never imagined finding such a perfect companion as Max. The team made the adoption process so easy!"</p>
+            <h4>- John D.</h4>
+        </div>
+    </section>
 
+    <section id="contact" class="section">
+        <h2>Contact Us</h2>
+        <form class="contact-form">
+            <h3>Learn more and get in touch with your new friend!</h3>
+            <input type="text" placeholder="Your Name" required>
+            <input type="email" placeholder="Your Email" required>
+            <textarea placeholder="Your Message" rows="4" required></textarea>
+            <button type="submit">Send Message</button>
+        </form>
+    </section>
     
 </body>
 </html>
