--- a/index.html
+++ b/index.html
@@ -130,6 +130,8 @@
             <button type="submit">Send Message</button>
         </form>
     </section>
-    
+     <footer class="footer">
+        <p>&copy; 2024 MyPet Adoption Center. All rights reserved.</p>
+    </footer>
 </body>
 </html>
