--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="main">
         <div class="navbar">
             <div class="icon">
-                <h3>Pawfect Friends</h3>
+                <h2 class="logo"> Pawfect Friends</h2>
             </div>
 
             <div class="menu">
@@ -24,8 +24,7 @@
                 </ul>
             </div>
         </div>
-    </div>
-    <script src="https://unpkg.com/ionicsons@5.4.0/dist/ionicons.js"></script>
+ 
     <div class="content">
         <h1> <span>Pet</span> Shelter</h1>
         <p class="par">Every animal deserves a loving home. Explore our services, meet our adorable pets, and make a difference today.</p>
@@ -82,6 +81,7 @@
             </div>
         </div>
     </section>
+        
    <section id="services">
         <h2>Our Services</h2>
         <div class="service-bottom">
@@ -126,7 +126,8 @@
             <button type="submit">Send Message</button>
         </form>
     </section>
-     <footer class="footer">
+        
+ <footer class="footer">
         <p>&copy; 2024 MyPet Adoption Center. All rights reserved.</p>
     </footer>
 </body>
