--- a/index.html
+++ b/index.html
@@ -129,5 +129,7 @@
  <footer class="footer">
         <p>&copy; 2024 MyPet Adoption Center. All rights reserved.</p>
     </footer>
+          <script src="script.js"></script>
+
 </body>
 </html>
